--- a/style.css
+++ b/style.css
@@ -69,13 +69,15 @@ ul {
 
 li {
     display: inline;
-    margin-right: 20px;
+    margin-right: 30px;
+
 }
 
 a {
     text-decoration: none;
     color: #333; /* Bağlantı rengi */
     font-weight: bold;
+    font-size: 19px;
     transition: color 0.3s; /* Renk değişimi animasyonu */
 }
 
