--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ li {
 
 a {
     text-decoration: none;
-    color: #333; /* Bağlantı rengi */
+   color: white; /* Bağlantı rengi */
     font-weight: bold;
     font-size: 19px;
     transition: color 0.3s; /* Renk değişimi animasyonu */
