--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,8 +6,7 @@ body {
 }
 
 header {
-    background-color: #404040;
-    color: #fff;
+    color: black;
     text-align: center;
     padding: 20px;
 }
@@ -53,8 +52,6 @@ button:hover {
 footer {
     text-align: center;
     padding: 10px;
-    background-color: #404040;
-    color: #fff;
     position: fixed;
     bottom: 0;
     width: 100%;
@@ -74,12 +71,13 @@ li {
 
 a {
     text-decoration: none;
-   color: white; /* Bağlantı rengi */
+    color: black; /* Bağlantı rengi */
     font-weight: bold;
     font-size: 19px;
     transition: color 0.3s; /* Renk değişimi animasyonu */
 }
 
 a:hover {
-    color: #fff; /* Fare üzerine geldiğinde yeni renk */
+    font-size: 19px;
+    color: red; /* Fare üzerine geldiğinde yeni renk */
 }
